--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
   </head>
   <body>
     <div id="app"></div>
